--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 }
 
 body{
-  background-image: url("Sunrise-BG.png");
+  background-image: url(https://library.sportingnews.com/styles/crop_style_16_9_desktop/s3/2021-08/sofi-stadium-090120-getty-ftr_f53wszq9wm9d1xupsb9q7qk7n.jpg?itok=GNtrj6WI);
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
